--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -82,19 +82,20 @@
 % Auf jeder Folie etwas vermitteln das nicht auf der Folie steht
 
 
-% \input{introduction2.tex} % actual introduction, ~85%
+\input{introduction2.tex} % actual introduction, ~85%
 \input{decisions.tex}     % few slides with a lot of information to talk about
-
+\input{map.tex}
 
 % % % \input{predictably_wrong.tex}     % still exists, won't be used.
 
-% \input{bayes.tex}     % not existent yet
-% \input{occam.tex}     % in progress ~85%
+\input{bayes.tex}     % in progress ~20%
+\input{occam.tex}     % in progress ~85%
+\input{mysterious.tex} % in progress ~25%
 % \input{critical.tex}  % not existent yet
 
 
 %%%%%%%%%% END %%%%%%%%%%
-% \input{cites.tex}
+\input{cites.tex}
 
 
 
