--- a/lesswrong/introduction2.tex
+++ b/lesswrong/introduction2.tex
@@ -41,16 +41,16 @@
     \item Bayes' Theorem        \only<3->{(Statistik)}
     \pause
     \pause
-%     \item <Philosophie>       \only<5->{(Philosophie)}
+    \item Modelle               \only<5->{(Philosophie)}
     \pause
     \pause
     \item Occams Rasiermesser   \only<7->{(Entscheidungstheorie)}
     \pause
     \pause
-%     \item Kognitionswisschenschaften    \only<9->{(System I/II)}
+    \item System I/II           \only<9->{(Kognitionswissenschaften)}
     \pause
     \pause
-%     \item Kritisches Denken \only<11->{(Wissenschaftliche Methode)}
+    \item Rätselhafte Antworten \only<11->{(...)}
     \end{itemize}
 \end{frame}
 
