--- a/studybees/begin.tex
+++ b/studybees/begin.tex
@@ -2,6 +2,7 @@
 
 
 \begin{frame}[c]{Bercin Yalcin}
+    \Large
     \begin{itemize}[<+(1)->]
     \item VWL-Studentin
     \item Gute Menschenkenntnisse
@@ -10,6 +11,7 @@
 \end{frame}
 
 \begin{frame}[c]{Bercin Yalcin}
+    \Large
     \begin{itemize}[<+(1)->]
     \item Kommunikation (Tutoren)
     \item HR-Management
@@ -18,6 +20,7 @@
 \end{frame}
 
 \begin{frame}[c]{Judith Michel}
+    \Large
     \begin{itemize}[<+(1)->]
     \item VWL-Studentin
     \item Tutorin
@@ -26,6 +29,7 @@
 \end{frame}
 
 \begin{frame}[c]{Judith Michel}
+    \Large
     \begin{itemize}[<+(1)->]
     \item Standortleitung
     \item Finden von Tutoren
@@ -35,6 +39,7 @@
 
 
 \begin{frame}[c]{Tim Kraus}
+    \Large
     \begin{itemize}[<+(1)->]
     \item Berufspilot
     \item Student (Soziologie/Kognitionswissenschaften)
@@ -43,6 +48,7 @@
 \end{frame}
 
 \begin{frame}[c]{Tim Kraus}
+    \Large
     \begin{itemize}[<+(1)->]
     \item Kommunikation (Universitäten)
     \item Administration
@@ -51,6 +57,7 @@
 \end{frame}
 
 \begin{frame}[c]{Felix Karg}
+    \Large
     \begin{itemize}[<+(1)->]
     \item Informatikstudent
     \item Tutor
@@ -60,6 +67,7 @@
 
 
 \begin{frame}[c]{Felix Karg}
+    \Large
     \begin{itemize}[<+(1)->]
     \item Strategische Planung
     \item Teamleitung
@@ -104,6 +112,7 @@
 \end{frame}
 
 \begin{frame}[c]{Marketing}
+    \Large
     \begin{itemize}[<+(1)->]
         \item Flyer
         \item Kugelschreiber
@@ -114,17 +123,49 @@
 \end{frame}
 
 
-\section{Finanzplan}
+\section{Risiken und Chancen}
 
-\begin{frame}[c]{Finanzplan}
+\begin{frame}[c]{Risiken und Chancen - Intern}
     \Large
-    Anlaufphase: 3 Monate
-    \pause
-    \newline
-    Testphase: halten von ersten Tutorien und ausweiten des Angebots
+    Persönliche Stärken:
+    \begin{itemize}[<+(1)->]
+    \item Direktkontakte zur Universität und den Studierenden
+    \item Vertrautheit mit Vorlesungsthemen
+    \item Konkretes Eingehen auf Vorlesungsthemen
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[c]{Risiken und Chancen - Intern}
+    \Large
+    Persönliche Schwächen:
+    \begin{itemize}[<+(1)->]
+    \item Neueinsteiger im Markt (Unerfahren)
+    \item Keine Kundenbeziehungen
+    \item Kein Eigenkapital
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[c]{Risiken und Chancen - Extern}
+    \Large
+    Markt-Chancen:
+    \begin{itemize}[<+(1)->]
+    \item Besseres Angebot
+    \item Große Reichweite
+    \item Günstiger als andere Anbieter
+    \item Markt ist noch nicht gesättigt
+    \end{itemize}
 \end{frame}
 
 
+\begin{frame}[c]{Risiken und Chancen - Extern}
+    \Large
+    Markt-Risiken:
+    \begin{itemize}[<+(1)->]
+    \item Mitbewerber haben bereits große Reichweite und sind etabliert
+    \item Weniger Bedarf als erwartet
+    \item Kopieren unseres Konzeptes
+    \end{itemize}
+\end{frame}
 
 
 \section{Rechtliche Grundlage}
@@ -140,5 +181,53 @@
 \end{frame}
 
 
+\section{Finanzplan}
+
+\begin{frame}[c]{Finanzplan}
+    \Large
+    Anlaufphase: 3 bis 6 Monate
+    \pause
+    \newline
+    Testphase: halten von ersten Tutorien und ausweiten des Angebots
+\end{frame}
 
 
+\begin{frame}[c]{Finanzplan}
+    \Large
+    \begin{itemize}[<+(1)->]
+    \item für Anlaufphase: ~56k
+%     \item für Anlaufphase: ~56k €
+%     \item für Anlaufphase: ~56k \EURtm
+    \item Puffer von bis zu 25k
+%     \item Puffer von bis zu 25k €
+%     \item Puffer von bis zu 25k \EURtm
+    \item Umsatz von 400k im dritten Jahr
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}[c]{Finanzplan - Details}
+    \Large
+    Damit sich ein Tutorat lohnt:
+    \begin{itemize}[<+(1)->]
+    \item Raumkosten nicht mehr als 200
+        \newline
+    \item Mindestens 11 Teilnehmer
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}[c]{Expansionsplan}
+    \begin{tabular}{|l|l|l|l|l|l|}
+        \hline
+        Semesterzahl & 1  & 2  & 3  & 4 \\
+        \hline
+        Anzahl Kurse & 12 & 24 & 36 & 48 \\
+        \hline
+    \end{tabular}
+\end{frame}
+
+
+\begin{frame}[standout]
+    ENDE
+\end{frame}
