--- a/studybees/main.tex
+++ b/studybees/main.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \usepackage{multicol}
+\usepackage{marvosym}
 % \usepackage{animate}
 % \usepackage{media9}
 
