--- a/strategy/main.tex
+++ b/strategy/main.tex
@@ -9,9 +9,10 @@
 \usetheme[numbering=fraction, progressbar=frametitle]{metropolis}
 
 
-\date{\today}
-\institute{University of Freiburg}
-\titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
+% \date{\today}
+\date{26. August 2017}
+\institute{Student of Rationality}
+% \titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
 \graphicspath{ {./template/} {./strategy/} }
 
 \title{Strategie}
@@ -19,8 +20,8 @@
 \subject{Mathecamp}
 
 \newif\ifonline
-\onlinefalse
 % \onlinefalse
+\onlinetrue
 
 \AtBeginSection[]
 {
