--- a/strategy/entropy.tex
+++ b/strategy/entropy.tex
@@ -17,7 +17,7 @@
 \begin{frame}[c]{Wichtige Implikationen für Strategie}
     \Large
     Gibt es auch bei Firmen! \\ \pause
-    Situation: Mobile OS und Microsoft \\ \pause
+    Situation: Mobile OS und Microsoft
 
 \end{frame}
 
@@ -38,6 +38,7 @@
 
 
 \begin{frame}[c]{Entropie: Beispiel}
+    \Large
     Situation: General Motors
 \end{frame}
 
