--- a/defense_bachelor/main.tex
+++ b/defense_bachelor/main.tex
@@ -2,15 +2,15 @@
 \usepackage[ngerman]{babel}
 
 
-\title{Template for Presentations}
+\title{Hi-C interaction matrix correction using ICE in Rust}
+\subtitle{Bachelor thesis defense}
 \author{Felix Karg}
 
 
-\graphicspath{ {../template/} {../template_tex/} } % add further graphics paths here
+\graphicspath{ {../template/} {./graphics/} } % add further graphics paths here
 
 
-\input{./setup}
-% \input{setup}
+\input{setup}
 
 
 
@@ -21,6 +21,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{chapters/introduction}
+% \input{chapters/motivation}
+\input{chapters/hic}
+\input{chapters/ice}
+\input{chapters/results}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
