--- a/defense_bachelor/setup.tex
+++ b/defense_bachelor/setup.tex
@@ -12,16 +12,16 @@
 
 
 \institute{University of Freiburg}
-\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\titlegraphic{\vspace{5cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
 
 
 \AtBeginSection[]
 {
     \large
     \begin{frame}{Content}
-        \begin{multicols}{2}
+%        \begin{multicols}{2}
             \tableofcontents[currentsection]
-        \end{multicols}
+%        \end{multicols}
         \clearpage
     \end{frame}
 }
@@ -30,9 +30,9 @@
 {
     \large
     \begin{frame}{Content}
-        \begin{multicols}{2}
+%         \begin{multicols}{2}
             \tableofcontents[currentsection,currentsubsection]
-        \end{multicols}
+%         \end{multicols}
         \clearpage
     \end{frame}
 }
@@ -60,10 +60,10 @@
 
 \begin{frame}{Content}
     \large
-    \begin{multicols}{2}
+%    \begin{multicols}{2}
 %        \tableofcontents[hidesubsections]
         \tableofcontents[]
-    \end{multicols}
+%    \end{multicols}
     % \clearpage
 \end{frame}
 
