--- a/defense_bachelor/references.bib
+++ b/defense_bachelor/references.bib
@@ -1,3 +1,241 @@
+% \cite{imakaev2012iterative} \cite{lieberman2009comprehensive} \cite{wingett2015hicup} \cite{pmid21646344} \cite{pmid19693276} \cite{Li2014} \cite{simonis2006nuclear} \cite{dostie2006chromosome} \cite{dekker2002capturing} \cite{rao20143d} \cite{wolff2018galaxy} \cite{zhao2006circular} \cite{ramirez2018high} \cite{bonev2016organization} \cite{knight2013fast} \cite{pennacchio2013enhancers} \cite{ron2017promoter}
+
+@article{imakaev2012iterative,
+  title={Iterative correction of Hi-C data reveals hallmarks of chromosome organization},
+  author={Imakaev, Maxim and Fudenberg, Geoffrey and McCord, Rachel Patton and Naumova, Natalia and Goloborodko, Anton and Lajoie, Bryan R and Dekker, Job and Mirny, Leonid A},
+  journal={Nature methods},
+  volume={9},
+  number={10},
+  pages={999},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{lieberman2009comprehensive,
+  title={Comprehensive mapping of long-range interactions reveals folding principles of the human genome},
+  author={Lieberman-Aiden, Erez and Van Berkum, Nynke L and Williams, Louise and Imakaev, Maxim and Ragoczy, Tobias and Telling, Agnes and Amit, Ido and Lajoie, Bryan R and Sabo, Peter J and Dorschner, Michael O and others},
+  journal={science},
+  volume={326},
+  number={5950},
+  pages={289--293},
+  year={2009},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{wingett2015hicup,
+  title={HiCUP: pipeline for mapping and processing Hi-C data},
+  author={Wingett, Steven and Ewels, Philip and Furlan-Magaril, Mayra and Nagano, Takashi and Schoenfelder, Stefan and Fraser, Peter and Andrews, Simon},
+  journal={F1000Research},
+  volume={4},
+  year={2015},
+  publisher={Faculty of 1000 Ltd}
+}
+
+% 21646344
+@article{pmid21646344,
+   Author="Cheung, M. S.  and Down, T. A.  and Latorre, I.  and Ahringer, J. ",
+   Title="{{S}ystematic bias in high-throughput sequencing data and its correction by {B}{E}{A}{D}{S}}",
+   Journal="Nucleic Acids Res.",
+   Year="2011",
+   Volume="39",
+   Number="15",
+   Pages="e103",
+   Month="Aug",
+   Note={[PubMed Central:\href{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3159482}{PMC3159482}] [DOI:\href{https://dx.doi.org/10.1093/nar/gkr425}{10.1093/nar/gkr425}] [PubMed:\href{https://www.ncbi.nlm.nih.gov/pubmed/20824077}{20824077}] }
+}
+
+% 19693276
+@article{pmid19693276,
+   Author="Teytelman, L.  and Ozaydin, B.  and Zill, O.  and Lefrancois, P.  and Snyder, M.  and Rine, J.  and Eisen, M. B. ",
+   Title="{{I}mpact of chromatin structures on {D}{N}{A} processing for genomic analyses}",
+   Journal="PLoS ONE",
+   Year="2009",
+   Volume="4",
+   Number="8",
+   Pages="e6700",
+   Month="Aug",
+   Note={[PubMed Central:\href{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2725323}{PMC2725323}] [DOI:\href{https://dx.doi.org/10.1371/journal.pone.0006700}{10.1371/journal.pone.0006700}] [PubMed:\href{https://www.ncbi.nlm.nih.gov/pubmed/12067662}{12067662}] }
+}
+
+@article{knight2013fast,
+  title={A fast algorithm for matrix balancing},
+  author={Knight, Philip A and Ruiz, Daniel},
+  journal={IMA Journal of Numerical Analysis},
+  volume={33},
+  number={3},
+  pages={1029--1047},
+  year={2013},
+  publisher={Oxford University Press}
+}
+% graphic from Wikipedia, Chromosome Conformation Techniques
+@Article{Li2014,
+    author="Li, Guoliang
+    and Cai, Liuyang
+    and Chang, Huidan
+    and Hong, Ping
+    and Zhou, Qiangwei
+    and Kulakova, Ekaterina V.
+    and Kolchanov, Nikolay A.
+    and Ruan, Yijun",
+    title="Chromatin Interaction Analysis with Paired-End Tag (ChIA-PET) sequencing technology and application",
+    journal="BMC Genomics",
+    year="2014",
+    month="Dec",
+    day="19",
+    volume="15",
+    number="12",
+    pages="S11",
+    abstract="Long-range chromatin interactions play an important role in transcription regulation. Chromatin Interaction Analysis with Paired-End-Tag sequencing (ChIA-PET) is an emerging technology that has unique advantages in chromatin interaction analysis, and thus provides insight into the study of transcription regulation.",
+    issn="1471-2164",
+    doi="10.1186/1471-2164-15-S12-S11",
+    url="https://doi.org/10.1186/1471-2164-15-S12-S11"
+}
+
+@article{simonis2006nuclear,
+  title={Nuclear organization of active and inactive chromatin domains uncovered by chromosome conformation capture--on-chip (4C)},
+  author={Simonis, Marieke and Klous, Petra and Splinter, Erik and Moshkin, Yuri and Willemsen, Rob and De Wit, Elzo and Van Steensel, Bas and De Laat, Wouter},
+  journal={Nature genetics},
+  volume={38},
+  number={11},
+  pages={1348},
+  year={2006},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{dostie2006chromosome,
+  title={Chromosome Conformation Capture Carbon Copy (5C): a massively parallel solution for mapping interactions between genomic elements},
+  author={Dostie, Jos{\'e}e and Richmond, Todd A and Arnaout, Ramy A and Selzer, Rebecca R and Lee, William L and Honan, Tracey A and Rubio, Eric D and Krumm, Anton and Lamb, Justin and Nusbaum, Chad and others},
+  journal={Genome research},
+  volume={16},
+  number={10},
+  pages={1299--1309},
+  year={2006},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{dekker2002capturing,
+  title={Capturing chromosome conformation},
+  author={Dekker, Job and Rippe, Karsten and Dekker, Martijn and Kleckner, Nancy},
+  journal={science},
+  volume={295},
+  number={5558},
+  pages={1306--1311},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{rao20143d,
+  title={A 3D map of the human genome at kilobase resolution reveals principles of chromatin looping},
+  author={Rao, Suhas SP and Huntley, Miriam H and Durand, Neva C and Stamenova, Elena K and Bochkov, Ivan D and Robinson, James T and Sanborn, Adrian L and Machol, Ido and Omer, Arina D and Lander, Eric S and others},
+  journal={Cell},
+  volume={159},
+  number={7},
+  pages={1665--1680},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{wolff2018galaxy,
+  title={Galaxy HiCExplorer: a web server for reproducible Hi-C data analysis, quality control and visualization},
+  author={Wolff, Joachim and Bhardwaj, Vivek and Nothjunge, Stephan and Richard, Gautier and Renschler, Gina and Gilsbach, Ralf and Manke, Thomas and Backofen, Rolf and Ram{\'\i}rez, Fidel and Gr{\"u}ning, Bj{\"o}rn A},
+  journal={Nucleic acids research},
+  volume={46},
+  number={W1},
+  pages={W11--W16},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{zhao2006circular,
+  title={Circular chromosome conformation capture (4C) uncovers extensive networks of epigenetically regulated intra-and interchromosomal interactions},
+  author={Zhao, Zhihu and Tavoosidana, Gholamreza and Sj{\"o}linder, Mikael and G{\"o}nd{\"o}r, Anita and Mariano, Piero and Wang, Sha and Kanduri, Chandrasekhar and Lezcano, Magda and Sandhu, Kuljeet Singh and Singh, Umashankar and others},
+  journal={Nature genetics},
+  volume={38},
+  number={11},
+  pages={1341},
+  year={2006},
+  publisher={Nature Publishing Group}
+}
+
+@article{ramirez2018high,
+  title={High-resolution TADs reveal DNA sequences underlying genome organization in flies},
+  author={Ram{\'\i}rez, Fidel and Bhardwaj, Vivek and Arrigoni, Laura and Lam, Kin Chung and Gr{\"u}ning, Bj{\"o}rn A and Villaveces, Jos{\'e} and Habermann, Bianca and Akhtar, Asifa and Manke, Thomas},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={189},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@misc{figchromatinstructures,
+  author = {Richard Wheeler},
+  title = {Chromatin Structures},
+  year = 2005,
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Chromatin_Structures.png}},
+  Note = {Licensed under CC BY-SA 3.0; Image has been cropped; accessed 2019-06-26}
+}
+
+@misc{figenhancers,
+  author = {Jon Cheff},
+  title = {Enhancer Nucleotide Sequence},
+  year = 2015,
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Enhancer_Nucleotide_Sequence.svg}},
+  Note = {Licensed under CC BY-SA 4.0; Image has been cropped; accessed 2019-07-12}
+}
+
+@misc{rustbegin,
+  author = {Graydon Hoare},
+  title = {Rust FAQ},
+  year = 2019,
+  howpublished = {\url{https://prev.rust-lang.org/en-US/faq.html}},
+  Note = {accessed 2019-06-26}
+}
+
+@misc{rustcompile,
+  author = {Graydon Hoare},
+  title = {stage1/rustc builds},
+  year = 2011,
+  howpublished = {\url{https://mail.mozilla.org/pipermail/rust-dev/2011-April/000330.html}},
+  Note = {accessed 2019-06-26}
+}
+
+@misc{rustversions,
+  title = {Rust Version History},
+  year = 2019,
+  howpublished = {\url{https://github.com/rust-lang/rust/blob/master/RELEASES.md}},
+  Note = {accessed 2019-06-26}
+}
+
+@misc{rustchanges,
+  title = {The Rise And Fall of Languages in 2013},
+  year = 2013,
+  howpublished = {\url{http://www.drdobbs.com/jvm/the-rise-and-fall-of-languages-in-2013/240165192}},
+  Note = {accessed 2019-06-26}
+}
+
+@misc{rustupdate,
+  title = {Rust Survey 2018 Results},
+  year = 2018,
+  howpublished = {\url{https://blog.rust-lang.org/2018/11/27/Rust-survey-2018.html}},
+  Note = {accessed 2019-06-26}
+}
+
+@misc{rustloved,
+  title = {Stack Overflow Survey},
+  year = 2019,
+  howpublished = {\url{https://insights.stackoverflow.com/survey/2019#technology-_-most-loved-dreaded-and-wanted-languages}},
+  Note = {accessed 2019-06-26}
+}
+
+@misc{pronememory,
+  title = {Memory Management Bugs: An Introduction},
+  year = 2016,
+  howpublished = {\url{https://backtrace.io/blog/backtrace/introduction-to-memory-management-errors/}},
+  Note = {accessed 2019-06-26}
+}
+
 @misc{benchcpp,
     title = {Rust comparison with C++},
     year = 2019,
@@ -5,5 +243,70 @@
     Note = {accessed 2019-06-26}
 }
 
+@misc{benchc,
+    title = {Rust comparison with C},
+    year = 2019,
+    howpublished = {\url{https://benchmarksgame-team.pages.debian.net/benchmarksgame/fastest/rust.html}},
+    Note = {accessed 2019-06-26}
+}
+
+@misc{processor,
+    year = 2019,
+    howpublished = {\url{https://ark.intel.com/content/www/us/en/ark/products/92981/intel-xeon-processor-e5-2630-v4-25m-cache-2-20-ghz.html}},
+    Note = {accessed 2019-06-26}
+}
+@article{bonev2016organization,
+  title={Organization and function of the 3D genome},
+  author={Bonev, Boyan and Cavalli, Giacomo},
+  journal={Nature Reviews Genetics},
+  volume={17},
+  number={11},
+  pages={661},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{pennacchio2013enhancers,
+  title={Enhancers: five essential questions},
+  author={Pennacchio, Len A and Bickmore, Wendy and Dean, Ann and Nobrega, Marcelo A and Bejerano, Gill},
+  journal={Nature Reviews Genetics},
+  volume={14},
+  number={4},
+  pages={288},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
+@article{ron2017promoter,
+  title={Promoter-enhancer interactions identified from Hi-C data using probabilistic models and hierarchical topological domains},
+  author={Ron, Gil and Globerson, Yuval and Moran, Dror and Kaplan, Tommy},
+  journal={Nature communications},
+  volume={8},
+  number={1},
+  pages={2237},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
 
 
+@article{aird2011analyzing,
+  title={Analyzing and minimizing PCR amplification bias in Illumina sequencing libraries},
+  author={Aird, Daniel and Ross, Michael G and Chen, Wei-Sheng and Danielsson, Maxwell and Fennell, Timothy and Russ, Carsten and Jaffe, David B and Nusbaum, Chad and Gnirke, Andreas},
+  journal={Genome biology},
+  volume={12},
+  number={2},
+  pages={R18},
+  year={2011},
+  publisher={BioMed Central}
+}
+
+@article{ulianov2016active,
+  title={Active chromatin and transcription play a key role in chromosome partitioning into topologically associating domains},
+  author={Ulianov, Sergey V and Khrameeva, Ekaterina E and Gavrilov, Alexey A and Flyamer, Ilya M and Kos, Pavel and Mikhaleva, Elena A and Penin, Aleksey A and Logacheva, Maria D and Imakaev, Maxim V and Chertovich, Alexander and others},
+  journal={Genome research},
+  volume={26},
+  number={1},
+  pages={70--84},
+  year={2016},
+  publisher={Cold Spring Harbor Lab}
+}
