added introduction and parts of Hi-C

--- a/defense_bachelor/main.tex
+++ b/defense_bachelor/main.tex
@@ -32,9 +32,12 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Sources}
+\section{Sources}
+\setbeamertemplate{bibliography item}[triangle] 
+\begin{frame}[c, fragile, allowframebreaks]{Sources}
+% \begin{frame}[c, allowframebreaks]{Sources}
 % \bibliographystyle{plainnat}
+% \bibliographystyle{plain}
 \bibliographystyle{ieeetr}
 \bibliography{references.bib}
 \end{frame}
