--- a/defense_bachelor/references.bib
+++ b/defense_bachelor/references.bib
@@ -1,4 +1,4 @@
-% \cite{imakaev2012iterative} \cite{lieberman2009comprehensive} \cite{wingett2015hicup} \cite{pmid21646344} \cite{pmid19693276} \cite{Li2014} \cite{simonis2006nuclear} \cite{dostie2006chromosome} \cite{dekker2002capturing} \cite{rao20143d} \cite{wolff2018galaxy} \cite{zhao2006circular} \cite{ramirez2018high} \cite{bonev2016organization} \cite{knight2013fast} \cite{pennacchio2013enhancers} \cite{ron2017promoter}
+% \cite{imakaev2012iterative} \cite{lieberman2009comprehensive} \cite{wingett2015hicup} \cite{pmid21646344} \cite{pmid19693276} \cite{Li2014} \cite{simonis2006nuclear} \cite{dostie2006chromosome} \cite{dekker2002capturing} \cite{rao20143d} \cite{wolff2018galaxy} \cite{zhao2006circular} \cite{ramirez2018high} \cite{bonev2016organization} \cite{knight2013fast} \cite{pennacchio2013enhancers} \cite{ron2017promoter} \cite{spilianakis2005interchromosomal}
 
 @article{imakaev2012iterative,
   title={Iterative correction of Hi-C data reveals hallmarks of chromosome organization},
@@ -309,4 +309,15 @@
   pages={70--84},
   year={2016},
   publisher={Cold Spring Harbor Lab}
+}
+
+@article{spilianakis2005interchromosomal,
+  title={Interchromosomal associations between alternatively expressed loci},
+  author={Spilianakis, Charalampos G and Lalioti, Maria D and Town, Terrence and Lee, Gap Ryol and Flavell, Richard A},
+  journal={Nature},
+  volume={435},
+  number={7042},
+  pages={637},
+  year={2005},
+  publisher={Nature Publishing Group}
 }
