made bibliography useful

--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -29,7 +29,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Sources}
+\begin{frame}[c,fragile,allowframebreaks]{Sources}
 % \bibliographystyle{plainnat}
 \bibliographystyle{ieeetr}
 \bibliography{references.bib}
