--- a/defense_bachelor/main.tex
+++ b/defense_bachelor/main.tex
@@ -21,12 +21,27 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{chapters/introduction}
+
+
+\begin{frame}{Content}
+    \large
+%     \begin{multicols}{2}
+%         \tableofcontents[hidesubsections]
+        \tableofcontents[]
+%     \end{multicols}
+    % \clearpage
+\end{frame}
+
+
+
 % \input{chapters/motivation}
 \input{chapters/hic}
 \input{chapters/ice}
-\input{chapters/current}
+% \input{chapters/current}
+\input{chapters/rust}
+\input{chapters/integration}
 \input{chapters/results}
-
+\input{chapters/conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -34,7 +49,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Sources}
-\setbeamertemplate{bibliography item}[triangle] 
+\setbeamertemplate{bibliography item}[triangle]
 \begin{frame}[c, fragile, allowframebreaks]{Sources}
 % \begin{frame}[c, allowframebreaks]{Sources}
 % \bibliographystyle{plainnat}
@@ -43,5 +58,7 @@
 \bibliography{references.bib}
 \end{frame}
 
+
+\input{chapters/additional}
 
 \end{document}
