semifinal version of defense

--- a/defense_bachelor/setup.tex
+++ b/defense_bachelor/setup.tex
@@ -8,6 +8,10 @@
 \usepackage{verbatimbox}
 \usepackage{tikz}
 
+\usepackage[font=scriptsize,labelfont=scriptsize]{subfig}
+% \usepackage[font=footnotesize,labelfont=footnotesize]{subfig}
+
+
 \usepackage{minted}
 \usemintedstyle{pastie}
 
