--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -9,7 +9,7 @@
 \graphicspath{ {../template/} {../template_tex/} } % add further graphics paths here
 
 
-\input{./setup}
+\input{setup}
 % \input{setup}
 
 
