--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -1,5 +1,5 @@
-\documentclass[12pt,compress,ngerman,utf8,t,usenames,dvipsnames]{beamer}
-\usepackage[ngerman]{babel}
+\documentclass[12pt,compress,ngerman,english,utf8,t,usenames,dvipsnames]{beamer}
+\usepackage[ngerman, english]{babel}
 
 
 \title{Template for Presentations}
