--- a/template_tex/setup.tex
+++ b/template_tex/setup.tex
@@ -8,8 +8,8 @@
 \usetheme[numbering=fraction, progressbar=frametitle]{metropolis}
 
 
-% \date{\today}
-\date{12. Juli 2019}
+\date{\today}
+% \date{12. Juli 2019}
 
 
 \institute{University of Freiburg}
