added some stuff to template

--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -6,11 +6,10 @@
 \author{Felix Karg}
 
 
-\graphicspath{ {../template/} {../template_tex/} } % add further graphics paths here
+\graphicspath{ {../template/} {./graphics} {../template_tex/} } % add further graphics paths here
 
 
 \input{setup}
-% \input{setup}
 
 
 
@@ -35,5 +34,6 @@
 \bibliography{references.bib}
 \end{frame}
 
+\input{chapters/additional}
 
 \end{document}
