--- a/htm/references.bib
+++ b/htm/references.bib
@@ -1,4 +1,4 @@
-% \cite{mengistu2016evolutionary} \cite{purdy2016encoding}
+% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human}
 
 
 @article{mengistu2016evolutionary,
@@ -17,5 +17,15 @@
   author={Purdy, Scott},
   journal={arXiv preprint arXiv:1602.05925},
   year={2016}
+}
+
+@article{herculano2009human,
+  title={The human brain in numbers: a linearly scaled-up primate brain},
+  author={Herculano-Houzel, Suzana},
+  journal={Frontiers in human neuroscience},
+  volume={3},
+  pages={31},
+  year={2009},
+  publisher={Frontiers}
 }
 
