made considerable progress

--- a/htm/main.tex
+++ b/htm/main.tex
@@ -24,10 +24,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \input{chapters/introduction}
 \input{chapters/recap}
+
 \section{Core Concepts}
 \input{chapters/overview}
 \input{chapters/hierarchies}
 \input{chapters/sdr}
+
+\input{chapters/implications}
+
+\input{chapters/open}
+
 
 
 % \input{chapters/ml}
@@ -43,7 +49,7 @@
     \Large
     \vfill
 The slides are online: \url{https://github.com/fkarg/things-to-talk-about/blob/master/htm/main.pdf} \vfill
-Drop me a mail: fkarg10[@]gmail.com \vfill \newpage
+Drop me a mail: fkarg10@gmail.com \vfill \newpage
 % \bibliographystyle{plainnat}
 \bibliographystyle{ieeetr}
 \bibliography{references.bib}
