--- a/htm/references.bib
+++ b/htm/references.bib
@@ -1,4 +1,4 @@
-% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human}
+% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average}
 
 
 @article{mengistu2016evolutionary,
@@ -28,4 +28,58 @@
   year={2009},
   publisher={Frontiers}
 }
+
+@misc{figsidebrain,
+  author = {Dr. Johannes Sobotta},
+  title = {An anatomical illustration from Sobotta's Human Anatomy 1908},
+  year = 1908,
+  howpublished = {\url{https://upload.wikimedia.org/wikipedia/commons/e/ea/Sobo_1909_624.png}},
+  Note = {Licensed under CC BY-SA 3.0; Accessed 2019-08-17}
+}
+
+
+@misc{figcorticalcolumn,
+  author = {Blue Brain Project},
+  title = {Cortical Column},
+  year = 2012,
+  howpublished = {\url{https://www.mada.org.il/brain/tools-e.html}},
+  Note = {Accessed 2019-08-18}
+}
+
+@misc{impact2015firing,
+  author = {AI Impacts},
+  title = {Neuron firing rates in humans},
+  year = 2015,
+  howpublished = {\url{https://aiimpacts.org/rate-of-neuron-firing/}},
+  Note = {Accessed 2019-08-18}
+}
+
+@article{wang2016firing,
+  title={Firing frequency maxima of fast-spiking neurons in human, monkey, and mouse neocortex},
+  author={Wang, Bo and Ke, Wei and Guang, Jing and Chen, Guang and Yin, Luping and Deng, Suixin and He, Quansheng and Liu, Yaping and He, Ting and Zheng, Rui and others},
+  journal={Frontiers in cellular neuroscience},
+  volume={10},
+  pages={239},
+  year={2016},
+  publisher={Frontiers}
+}
+
+@article{yi2019average,
+  title={Average firing rate rather than temporal pattern determines metabolic cost of activity in thalamocortical relay neurons},
+  author={Yi, Guosheng and Grill, Warren M},
+  journal={Scientific reports},
+  volume={9},
+  number={1},
+  pages={6940},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@misc{figneuron,
+  author = {Pixabay.com},
+  title = {Brain Neuron Nerves},
+  howpublished = {\url{pixabay.com}},
+  Note = {Pixabay License (free for commercial and noncommercial use, no attribution required), Accessed 2019-08-21}
+}
+
 
