made some progress

--- a/htm/main.tex
+++ b/htm/main.tex
@@ -23,10 +23,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \input{chapters/introduction}
+\input{chapters/note}
 \input{chapters/recap}
+\input{chapters/overview}
 
 \section{Core Concepts}
-\input{chapters/overview}
 \input{chapters/hierarchies}
 \input{chapters/sdr}
 
