--- a/htm/main.tex
+++ b/htm/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
-\usepackage[ngerman, english]{babel}
+\usepackage[ngerman, english,main=english]{babel}
 
 
 \title{Hierarchical Temporal Memory}
@@ -22,18 +22,24 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{chapters/introduction}
-\input{chapters/note}
-\input{chapters/recap}
-\input{chapters/overview}
+% % \input{chapters/introduction}
+% \input{chapters/note}
+% \input{chapters/bio}
+% \input{chapters/overview}
 
-\section{Core Concepts}
-\input{chapters/hierarchies}
+% \section{Core Concepts}
+% \input{chapters/hierarchies}
 \input{chapters/sdr}
 
-\input{chapters/implications}
-
-\input{chapters/open}
+% \section{Learning}
+% \input{chapters/spatial_pooling}
+% \input{chapters/temporal_pooling}
+% 
+% \input{chapters/implications}
+% 
+% % \input{chapters/recap}
+% 
+% \input{chapters/open}
 
 
 
