--- a/htm/references.bib
+++ b/htm/references.bib
@@ -83,3 +83,10 @@
 }
 
 
+@misc{figcolum2,
+  author = {Henry Gray},
+  title = {Gray754},
+  year = 1918,
+  howpublished = {\url{https://en.wikipedia.org/wiki/File:Gray754.png}},
+  Note = {Accessed 2019-08-24}
+}
