make through it all

--- a/ideas/begin.tex
+++ b/ideas/begin.tex
@@ -86,7 +86,7 @@
     Traditionelle See-Schlachten: Linienkämpfe \\
     \pause
     Nelsons Plan: \\
-    \includegraphics[height=6cm]{strategy/Trafalgar-1200hr.jpg}
+    \includegraphics[height=6cm]{Trafalgar-1200hr.jpg}
 \end{frame}
 
 \ifonline
