--- a/ideas/end.tex
+++ b/ideas/end.tex
@@ -63,7 +63,7 @@
 
 \begin{frame}[c]{SpaceX}
 
-    \includegraphics[height=3cm]{strategy/comparison.jpg} \\
+    \includegraphics[height=3cm]{comparison.jpg} \\
 
     \begin{tabular}{l|l|l|l|l}
         Rakete       & zum LEO   & zum GTO   & Traglast zum Mars & Kosten \\ \hline
