--- a/ideas/main.tex
+++ b/ideas/main.tex
@@ -11,8 +11,8 @@
 
 \date{\today}
 \institute{University of Freiburg}
-\titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} {./strategy/} }
+\titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\graphicspath{ {../template/} {../strategy/}}
 
 \title{Strategie}
 \author{Felix Karg}
