--- a/lesswrong/bayes.tex
+++ b/lesswrong/bayes.tex
@@ -4,8 +4,8 @@
 \begin{frame}[c]{Bayes'sche Theorem: xkcd}
     \begin{multicols}{2}
     \begin{itemize}
-        \item[]<1> \includegraphics[height=7cm]{strategy/xkcd_frequentists_vs_bayesians.png}
-        \item[]<2> \includegraphics[height=7cm]{strategy/xkcd_seashell.png}
+        \item[]<1> \includegraphics[height=7cm]{xkcd_frequentists_vs_bayesians}
+        \item[]<2> \includegraphics[height=7cm]{xkcd_seashell.png}
     \end{itemize}
     \end{multicols}
 \end{frame}
