--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -11,7 +11,7 @@
 
 \date{\today}
 \institute{Student of Rationality}
-\graphicspath{ {./template/} {./lesswrong/graphics/} }
+\graphicspath{ {../template/} {./graphics/} {../strategy/} }
 % \titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{template/Logo-LessWrong.png}}
 
 \title{How to be less wrong}
