--- a/superturingmachines/ordinals.tex
+++ b/superturingmachines/ordinals.tex
@@ -34,7 +34,7 @@
     \only<2> {Normaler Zahlenstrahl mit ersten Ordinalen Zahlen:\\}
     \Huge
     \only<1> {
-        \includegraphics[width=0.8\textwidth]{proseminar/images/zahlenstrahl.jpeg}
+        \includegraphics[width=0.8\textwidth]{zahlenstrahl.jpeg}
         % ganz Normaler Zahlenstrahl, soweit bekannt
         % Zahlen haben Ordinale Eigenschaften
         % Eigenschaften:
@@ -46,13 +46,13 @@
     }
 
     \only<2> {
-        \includegraphics[width=0.85\textwidth]{proseminar/images/zahlenstrahl_ordinal.jpeg}
+        \includegraphics[width=0.85\textwidth]{zahlenstrahl_ordinal.jpeg}
         % Tadaa! Wir haben zum einen alle 'Normalen' Schritte, haben aber
         % danach immernoch weitere! Wir haben sogar noch Weitere Schritte danach!
     }
 
     \only<3> {
-        \includegraphics[width=\textwidth]{proseminar/images/ordinal-omega-squared}
+        \includegraphics[width=\textwidth]{ordinal-omega-squared}
         % Das hört da natürlich noch nicht auf, es gibt natürlich noch weitere
         % Stufen, also weitere (explizite) Ordinalzahlen.
         % Bei $\omega * 2$ haben wir also schon 2 mal bis unendlich gezählt!
@@ -60,7 +60,7 @@
 
     \only<4> {
         \hspace{2cm}
-        \includegraphics[height=0.8\textheight]{proseminar/images/ordinal}
+        \includegraphics[height=0.8\textheight]{ordinal}
         % Es ist so bisschen schwierig das in einen Sinnvollen Zahlenstrahl zu
         % packen ... aber ich hoffe ihr habt verstanden was gemeint ist :)
     }
