--- a/superturingmachines/turingmachine.tex
+++ b/superturingmachines/turingmachine.tex
@@ -1,7 +1,7 @@
 \section{Turingmaschinen}
 
 \begin{frame}[c]{Turingmaschine: Einführung}
-    \includegraphics[width=11cm]{proseminar/images/turing-machine.png}
+    \includegraphics[width=11cm]{turing-machine}
     % Keine Formale Definition, ist bekannt oder eben nicht
     % TM hat:
     % - Unendliches Band mit Zeichen drauf
@@ -11,7 +11,7 @@
 
 
 \begin{frame}[c]{Turingmaschine: Beispiel}
-    \includegraphics[width=10cm]{proseminar/images/tm-ex1.png} \\
+    \includegraphics[width=10cm]{tm-ex1} \\
     Schreibt 6 1er auf ein leeres Band.
 \end{frame}
 
