--- a/thinking-paradigms/main.tex
+++ b/thinking-paradigms/main.tex
@@ -11,7 +11,7 @@
 \date{\today}
 \institute{University of Freiburg}
 \titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} }
+\graphicspath{ {../template/} }
 %\titlegraphic{
 %    \begin{figure}[b!]
 %    \end{figure} }
