--- a/zsm/begin.tex
+++ b/zsm/begin.tex
@@ -1,6 +1,6 @@
 
 \begin{frame}[c]{Modell der Selbstmanagement-Kompetenz}
-    \includegraphics[width=\textwidth]{zsm/modell.jpeg}
+    \includegraphics[width=\textwidth]{modell.jpeg}
 \end{frame}
 
 
