--- a/zsm/main.tex
+++ b/zsm/main.tex
@@ -13,8 +13,8 @@
 
 \date{\today}
 \institute{University of Freiburg}
-\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} {./zsm/} }
+\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\graphicspath{ {../template/} }
 
 \title{Selbstmanagement-Kompetenz}
 \author{Janika, Maike, Charlotte, Felix}
