--- a/studybees/main.tex
+++ b/studybees/main.tex
@@ -14,8 +14,8 @@
 
 \date{\today}
 \institute{University of Freiburg}
-\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} {./proseminar/} {./proseminar/images/} }
+\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\graphicspath{ {../template/} {./images/} }
 
 \title{StudyBees}
 \author{Bercin Yalcin, Judith Michel, Tim Kraus, Felix Karg}
