--- a/superturingmachines/main.tex
+++ b/superturingmachines/main.tex
@@ -13,8 +13,8 @@
 
 \date{\today}
 \institute{University of Freiburg}
-\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} {./proseminar/} }
+\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\graphicspath{ {../template/} {./images/} }
 
 \title{Superturingmaschinen}
 \author{Felix Karg}
