--- a/strategy/main.tex
+++ b/strategy/main.tex
@@ -13,7 +13,7 @@
 \date{26. August 2017}
 \institute{Student of Rationality}
 % \titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} {./strategy/} }
+\graphicspath{ {../template/} {./images/} }
 
 \title{Strategie}
 \author{Felix Karg}
@@ -81,24 +81,24 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{begin.tex} % PROGRESS
+\input{chapters/begin.tex} % PROGRESS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%CACHED THOUGHTS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{cached.tex} % DONE
+\input{chapters/cached.tex} % DONE
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%NICHT-STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % not as important.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ECHTE STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{real_kernel.tex}   % DONE
-\input{sources_of_power.tex}  % IN PROGRESS
-\input{design.tex}    % IN PROGRESS
-\input{focus.tex}   % IN PROGRESS
+\input{chapters/real_kernel.tex}   % DONE
+\input{chapters/sources_of_power.tex}  % IN PROGRESS
+\input{chapters/design.tex}    % IN PROGRESS
+\input{chapters/focus.tex}   % IN PROGRESS
 % \input{equality.tex} % IN PROGRESS % can not be shown .
-\input{using_advantage.tex}   % IN PROGRESS
-\input{dynamics.tex} % IN PROGRESS
-\input{entropy.tex} % TODO
-\input{nvidia.tex} % TODO
+\input{chapters/using_advantage.tex}   % IN PROGRESS
+\input{chapters/dynamics.tex} % IN PROGRESS
+\input{chapters/entropy.tex} % TODO
+\input{chapters/nvidia.tex} % TODO
 
 
 
@@ -111,7 +111,7 @@
 % * a few more things Rationality says (Occam's Razor?)
 
 
-\input{final_example.tex} % TODO
+\input{chapters/final_example.tex} % TODO
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEISPIELE FÜR GUTE STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \input{examples_good.tex} % IN PROGRESS - Required even ?
@@ -120,7 +120,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%CITES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{cites.tex} % IN PROGRESS
+\input{chapters/cites.tex} % IN PROGRESS
 
 % other articles to include:
 % belief chains: http://lesswrong.com/lw/l9d/belief_chains/
