resolved dependencies and stuff

--- a/ideas/main.tex
+++ b/ideas/main.tex
@@ -12,7 +12,7 @@
 \date{\today}
 \institute{University of Freiburg}
 \titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
-\graphicspath{ {../template/} {../strategy/}}
+\graphicspath{ {../template/} {../strategy/images/}}
 
 \title{Strategie}
 \author{Felix Karg}
