--- a/htm/main.tex
+++ b/htm/main.tex
@@ -24,17 +24,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % % \input{chapters/introduction}
 % \input{chapters/note}
-% \input{chapters/bio}
+\input{chapters/bio}
 % \input{chapters/overview}
 
 % \section{Core Concepts}
 % \input{chapters/hierarchies}
-\input{chapters/sdr}
+% \input{chapters/sdr}
 
-% \section{Learning}
+\input{chapters/learning}
 % \input{chapters/spatial_pooling}
 % \input{chapters/temporal_pooling}
-% 
+
 % \input{chapters/implications}
 % 
 % % \input{chapters/recap}
@@ -63,7 +63,47 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 \end{frame}
 
 
-\input{chapters/additional}
+% \input{chapters/additional}
 
 
 \end{document}
+
+
+% TODO:
+
+% Include Topics/Facts:
+% 
+% - explain SDRs
+% - explain spatial & temporal pooler
+% - explain HTM
+% - explain reticular activating system
+% - explain gradient for Autism and that it is more 'bottom up'
+% - explain 'top-down' phenomena and common biases
+% - explain theory: inhibited-booost: hallucination
+% - The datastructure of the brain
+%
+%
+% Roadmap (?)
+%
+% - First: What is Intelligence ? (Early path, why we want to know this and why this is the most likely path)
+% - Introduce the biological neuron we will be talking about (multiple dendrites, one axon, ...)
+% - Introduce (SDR) Sparse Distributed Representations, in-Depth
+% - Introduce the CLA
+% - Introduce HTMv3 !
+% - Motor movements are just very strong predictions the body 'makes happen'
+%   - Flow state is where everything is exactly as predicted
+% - Mistakes that happen by accidential correlation: search for good example; mistaking something to be true
+% - explain gradient for Einstein/Craziness, proving vs disproving in the brain -> THC is bad
+% - Mistakes that happen by top-down enforcing (e.g. the dalmatine picture, scrambled words)
+% - Location-based composition: This explains mind palaces!
+% - Everything is a 'conceptspace' - 
+
+% - Explain Priming based on predictive stuff (the priming-bias)
+% - Explain biases based on these models
+% - Explain the fact that smarter people have less Brain activity
+% - Explain the bayesian-reasioning part
+% - Explain how cortical columns create quite powerful models
+
+
+
+% 
